[package]
name = "llrt"
version = "0.7.0-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["macro"]
macro = ["llrt_core/macro"]
lambda = ["llrt_core/lambda"]
no-sdk = ["llrt_core/no-sdk"]
uncompressed = ["llrt_core/uncompressed"]
bindgen = ["llrt_core/bindgen"]

[dependencies]
chrono = { version = "0.4", features = ["std"], default-features = false }
constcat = { version = "0.6", default-features = false }
crossterm = { version = "0.29", features = [
  "events",
  "windows",
], default-features = false }
llrt_core = { path = "../llrt_core" }
once_cell = { version = "1", features = ["std"], default-features = false }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
], default-features = false }
tracing = { version = "0.1", features = ["log"], default-features = false }
tracing-core = { version = "0.1", default-features = false }

[target.'cfg(not(target_os = "windows"))'.dependencies]
snmalloc-rs = { version = "0.3", features = [
  "default",
  "lto",
], default-features = false }

[dev-dependencies]
llrt_test = { version = "0.7.0-beta", path = "../libs/llrt_test" }

[[bin]]
name = "llrt"
path = "src/main.rs"
