[package]
name = "llrt_core"
version = "0.7.0-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["macro", "tls-ring", "crypto-rust"]
lambda = []
no-sdk = []
uncompressed = []
macro = ["rquickjs/macro"]
bindgen = ["rquickjs/bindgen"]

# TLS crypto backend features
tls-ring = ["rustls/ring", "llrt_modules/tls-ring"]
tls-aws-lc = ["rustls/aws_lc_rs", "llrt_modules/tls-aws-lc"]
tls-graviola = ["llrt_modules/tls-graviola"]
tls-openssl = ["llrt_modules/tls-openssl", "dep:openssl"]

# Crypto provider features
crypto-rust = ["llrt_modules/crypto-rust"]
crypto-ring = ["llrt_modules/crypto-ring"]
crypto-ring-rust = ["llrt_modules/crypto-ring-rust"]
crypto-graviola = ["llrt_modules/crypto-graviola"]
crypto-graviola-rust = ["llrt_modules/crypto-graviola-rust"]
crypto-openssl = ["llrt_modules/crypto-openssl"]

# OpenSSL vendored (builds OpenSSL from source)
openssl-vendored = ["llrt_modules/openssl-vendored", "openssl/vendored"]

[dependencies]
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", features = ["std", "clock"], default-features = false }
chrono-tz = { version = "0.10", default-features = false }
home = { version = "0.5", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
libc = { version = "0.2", default-features = false }
llrt_context = { path = "../libs/llrt_context" }
llrt_encoding = { path = "../libs/llrt_encoding" }
llrt_hooking = { path = "../libs/llrt_hooking" }
llrt_json = { path = "../libs/llrt_json" }
llrt_logging = { path = "../libs/llrt_logging" }
llrt_modules = { path = "../llrt_modules", default-features = false, features = ["base", "console"] }
llrt_numbers = { path = "../libs/llrt_numbers" }
llrt_utils = { path = "../libs/llrt_utils", features = ["all"] }
once_cell = { version = "1", features = ["std"], default-features = false }
phf = { version = "0.13", default-features = false }
quick-xml = { version = "0.39", default-features = false }
rand = { version = "0.10.0-rc.5", features = [
  "alloc",
  "thread_rng",
], default-features = false }
ring = { version = "0.17", default-features = false }
rquickjs = { version = "0.11", features = [
  "full-async",
  "parallel",
  "rust-alloc",
  "std",
], default-features = false }
rustls = { version = "0.23", features = [
  "tls12",
], default-features = false }
rustls-pemfile = { version = "2", features = ["std"], default-features = false }
ryu = { version = "1", default-features = false }
simd-json = { version = "0.17", default-features = false }
terminal_size = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["sync", "time"], default-features = false }
tracing = { version = "0.1", features = ["log"], default-features = false }
zstd = { version = "0.13", default-features = false }
openssl = { version = "0.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
md-5 = { version = "0.11.0-rc.3", default-features = false }
[target.'cfg(not(target_os = "windows"))'.dependencies]
md-5 = { version = "0.11.0-rc.3", default-features = false }

[build-dependencies]
rquickjs = { version = "0.11", features = [
  "full-async",
  "rust-alloc",
], default-features = false }
phf_codegen = { version = "0.13", default-features = false }
jwalk = { version = "0.8", default-features = false }
llrt_build = { path = "../libs/llrt_build" }
uuid = { version = "1", features = ["v4"], default-features = false }

[dev-dependencies]
wiremock = { version = "0.6", default-features = false }
llrt_test = { path = "../libs/llrt_test" }
