[package]
name = "llrt_core"
version = "0.8.1-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["macro", "tls-ring", "crypto-rust", "webpki-roots", "abort", "assert", "async-hooks", "buffer", "child-process", "console", "crypto", "dgram", "dns", "events", "exceptions", "fetch-c-http2", "fs", "https-http2", "intl", "navigator", "net", "os", "path", "perf-hooks", "process", "stream-web", "string-decoder", "temporal", "timers", "tls", "tty", "url", "util", "zlib"]
lambda = []
no-sdk = []
uncompressed = []
macro = ["rquickjs/macro"]
bindgen = ["rquickjs/bindgen"]

# TLS crypto backend features
tls-ring = ["rustls/ring", "llrt_modules/tls-ring"]
tls-aws-lc = ["rustls/aws_lc_rs", "llrt_modules/tls-aws-lc"]
tls-graviola = ["llrt_modules/tls-graviola"]
tls-openssl = ["llrt_modules/tls-openssl", "dep:openssl"]

# Crypto provider features
crypto-rust = ["llrt_modules/crypto-rust"]
crypto-ring = ["llrt_modules/crypto-ring"]
crypto-ring-rust = ["llrt_modules/crypto-ring-rust"]
crypto-graviola = ["llrt_modules/crypto-graviola"]
crypto-graviola-rust = ["llrt_modules/crypto-graviola-rust"]
crypto-openssl = ["llrt_modules/crypto-openssl"]

# OpenSSL vendored (builds OpenSSL from source)
openssl-vendored = ["openssl/vendored"]

# Certificate verification backends (pick one)
webpki-roots = ["llrt_modules/webpki-roots"]
native-roots = ["llrt_modules/native-roots"]
platform-verifier = ["llrt_modules/platform-verifier"]

# Optional modules
abort = ["llrt_modules/abort"]
assert = ["llrt_modules/assert"]
async-hooks = ["llrt_modules/async-hooks"]
buffer = ["llrt_modules/buffer"]
child-process = ["llrt_modules/child-process"]
console = ["llrt_modules/console"]
crypto = ["llrt_modules/crypto"]
dgram = ["llrt_modules/dgram"]
dns = ["llrt_modules/dns"]
events = ["llrt_modules/events"]
exceptions = ["llrt_modules/exceptions"]
fetch = ["llrt_modules/fetch"]
fetch-c = ["fetch", "llrt_modules/fetch-c"]
fetch-rust = ["fetch", "llrt_modules/fetch-rust"]
fetch-http2 = ["fetch", "llrt_modules/fetch-http2"]
fetch-c-http2 = ["fetch-c", "fetch-http2"]
fetch-rust-http2 = ["fetch-rust", "fetch-http2"]
fs = ["llrt_modules/fs"]
https = ["llrt_modules/https"]
https-http1 = ["https"]
https-http2 = ["https", "llrt_modules/https-http2"]
intl = ["llrt_modules/intl"]
navigator = ["llrt_modules/navigator"]
net = ["llrt_modules/net"]
os = ["llrt_modules/os"]
path = ["llrt_modules/path"]
perf-hooks = ["llrt_modules/perf-hooks"]
process = ["llrt_modules/process"]
stream-web = ["llrt_modules/stream-web"]
string-decoder = ["llrt_modules/string-decoder"]
temporal = ["llrt_modules/temporal"]
timers = ["llrt_modules/timers"]
tls = ["llrt_modules/tls"]
tty = ["llrt_modules/tty"]
url = ["llrt_modules/url"]
util = ["llrt_modules/util"]
zlib = ["llrt_modules/zlib"]

[dependencies]
bytes = { version = "1", default-features = false }
home = { version = "0.5", default-features = false }
http-body-util = { version = "0.1", default-features = false }
hyper = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
jiff = { version = "0.2" }
libc = { version = "0.2", default-features = false }
llrt_context = { path = "../libs/llrt_context" }
llrt_encoding = { path = "../libs/llrt_encoding" }
llrt_hooking = { path = "../libs/llrt_hooking" }
llrt_json = { path = "../libs/llrt_json" }
llrt_logging = { path = "../libs/llrt_logging" }
llrt_modules = { path = "../llrt_modules", default-features = false, features = [
  "base",
  "console",
] }
llrt_numbers = { path = "../libs/llrt_numbers" }
llrt_utils = { path = "../libs/llrt_utils", features = ["all"] }
once_cell = { version = "1", features = ["std"], default-features = false }
phf = { version = "0.13", default-features = false }
quick-xml = { version = "0.39", default-features = false }
rand = { version = "0.10.0", features = [
  "alloc",
  "thread_rng",
], default-features = false }
rquickjs = { version = "0.11", features = [
  "futures",
  "parallel",
  "rust-alloc",
], default-features = false }
rustls = { version = "0.23", features = ["tls12"], default-features = false }
rustls-pemfile = { version = "2", features = ["std"], default-features = false }
ryu = { version = "1", default-features = false }
simd-json = { version = "0.17", default-features = false }
terminal_size = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["sync", "time"], default-features = false }
tracing = { version = "0.1", features = ["log"], default-features = false }
zstd = { version = "0.13", features = ["thin"], default-features = false }
openssl = { version = "0.10", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
md-5 = { version = "0.11.0", default-features = false }
[target.'cfg(not(target_os = "windows"))'.dependencies]
md-5 = { version = "0.11.0", default-features = false }

[build-dependencies]
rquickjs = { version = "0.11", default-features = false }
phf_codegen = { version = "0.13", default-features = false }
llrt_build = { path = "../libs/llrt_build" }
uuid = { version = "1", features = ["v4"], default-features = false }
walkdir = { version = "2", default-features = false }

[dev-dependencies]
wiremock = { version = "0.6", default-features = false }
llrt_test = { path = "../libs/llrt_test" }
