[package]
name = "llrt_modules"
description = "LLRT Modules for rquickjs"
version = "0.6.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"
readme = "README.md"

[features]
default = ["base", "console"]
lambda = ["base"]

base = [
  "abort",
  "assert",
  "async_hooks",
  "buffer",
  "child-process",
  "crypto",
  "dns",
  "events",
  "exceptions",
  "fetch",
  "fs",
  "navigator",
  "net",
  "os",
  "path",
  "perf-hooks",
  "process",
  "stream-web",
  "string-decoder",
  "timers",
  "tty",
  "url",
  "util",
  "zlib",
]

# Modules
abort = ["llrt_abort"]
assert = ["llrt_assert"]
async_hooks = ["llrt_async_hooks"]
buffer = ["llrt_buffer"]
child-process = ["llrt_child_process"]
console = ["llrt_console"]
crypto = ["llrt_crypto"]
dns = ["llrt_dns"]
events = ["llrt_events"]
exceptions = ["llrt_exceptions"]
fetch = ["llrt_fetch"]
fs = ["llrt_fs"]
navigator = ["llrt_navigator"]
net = ["llrt_net"]
os = ["llrt_os"]
path = ["llrt_path"]
process = ["llrt_process"]
perf-hooks = ["llrt_perf_hooks"]
stream-web = ["llrt_stream_web"]
string-decoder = ["llrt_string_decoder"]
timers = ["llrt_timers"]
tty = ["llrt_tty"]
url = ["llrt_url"]
util = ["llrt_util"]
zlib = ["llrt_zlib"]

[dependencies]
llrt_abort = { version = "0.6.0-beta", path = "../modules/llrt_abort", optional = true }
llrt_assert = { version = "0.6.0-beta", path = "../modules/llrt_assert", optional = true }
llrt_async_hooks = { version = "0.6.0-beta", path = "../modules/llrt_async_hooks", optional = true }
llrt_buffer = { version = "0.6.0-beta", path = "../modules/llrt_buffer", optional = true }
llrt_child_process = { version = "0.6.0-beta", path = "../modules/llrt_child_process", optional = true }
llrt_console = { version = "0.6.0-beta", path = "../modules/llrt_console", optional = true }
llrt_crypto = { version = "0.6.0-beta", path = "../modules/llrt_crypto", optional = true }
llrt_dns = { version = "0.6.0-beta", path = "../modules/llrt_dns", optional = true }
llrt_events = { version = "0.6.0-beta", path = "../modules/llrt_events", optional = true }
llrt_exceptions = { version = "0.6.0-beta", path = "../modules/llrt_exceptions", optional = true }
llrt_fetch = { version = "0.6.0-beta", path = "../modules/llrt_fetch", optional = true }
llrt_fs = { version = "0.6.0-beta", path = "../modules/llrt_fs", optional = true }
llrt_navigator = { version = "0.6.0-beta", path = "../modules/llrt_navigator", optional = true }
llrt_net = { version = "0.6.0-beta", path = "../modules/llrt_net", optional = true }
llrt_os = { version = "0.6.0-beta", path = "../modules/llrt_os", default-features = false, optional = true }
llrt_path = { version = "0.6.0-beta", path = "../modules/llrt_path", optional = true }
llrt_process = { version = "0.6.0-beta", path = "../modules/llrt_process", optional = true }
llrt_perf_hooks = { version = "0.6.0-beta", path = "../modules/llrt_perf_hooks", optional = true }
llrt_stream_web = { version = "0.6.0-beta", path = "../modules/llrt_stream_web", optional = true }
llrt_string_decoder = { version = "0.6.0-beta", path = "../modules/llrt_string_decoder", optional = true }
llrt_timers = { version = "0.6.0-beta", path = "../modules/llrt_timers", optional = true }
llrt_tty = { version = "0.6.0-beta", path = "../modules/llrt_tty", optional = true }
llrt_url = { version = "0.6.0-beta", path = "../modules/llrt_url", optional = true }
llrt_util = { version = "0.6.0-beta", path = "../modules/llrt_util", optional = true }
llrt_zlib = { version = "0.6.0-beta", path = "../modules/llrt_zlib", optional = true }
llrt_utils = { version = "0.6.0-beta", path = "../libs/llrt_utils" }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.9.0", features = [
  "loader",
], default-features = false }
