[package]
name = "llrt_test"
description = "LLRT test helpers"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_test"
path = "src/lib.rs"

[dependencies]
nanoid = "0.4.0"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", rev = "3af3f46b13eb89a2694e5e4e2e73924a20fa9dd1", default-features = false }
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
