[package]
name = "llrt_utils"
version = "0.1.15-beta"
edition = "2021"
license-file = "LICENSE"

[features]
default = ["all"]
all = ["fs", "encoding"]

fs = ["tokio/fs"]
encoding = ["base64-simd", "hex-simd"]

[dependencies]
base64-simd = { version = "0.8.0", optional = true }
hex-simd = { version = "0.8.0", optional = true }
rquickjs = { version = "0.6.2", features = [
  "array-buffer",
], default-features = false }
tokio = { version = "1", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_nightly)'] }
