[package]
name = "llrt_utils"
description = "LLRT utilities"
version = "0.2.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[features]
default = ["all"]
all = ["ctx", "fs", "encoding"]

ctx = ["tokio/sync", "rquickjs/futures"]
fs = ["tokio/fs"]
encoding = ["base64-simd", "hex-simd", "phf"]

[dependencies]
base64-simd = { version = "0.8.0", optional = true }
hex-simd = { version = "0.8.0", optional = true }
rquickjs = { version = "0.6.2", features = [
  "array-buffer",
], default-features = false }
tokio = { version = "1", optional = true }
tracing = "0.1"
phf = { version = "0.11.2", features = ["macros"], optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rust_nightly)'] }
