[package]
name = "llrt_build"
description = "LLRT build helpers"
version = "0.8.1-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[lib]
name = "llrt_build"
path = "src/lib.rs"

[dependencies]
rustc_version = { version = "0.4", default-features = false }
