[package]
name = "llrt_context"
description = "LLRT context helpers"
version = "0.3.0-beta"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/llrt"

[dependencies]
rquickjs = { git = "https://github.com/DelSkayn/rquickjs.git", version = "0.8.1", features = [
  "futures",
], default-features = false }
tokio = { version = "1", features = ["sync"], default-features = false }
tracing = "0.1"

[dev-dependencies]
llrt_test = { version = "0.3.0-beta", path = "../llrt_test" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
llrt_build = { version = "0.3.0-beta", path = "../llrt_build" }
